--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.key filter=git-crypt diff=git-crypt
 *.pem filter=git-crypt diff=git-crypt
 *.env filter=git-crypt diff=git-crypt
+*.zip filter=lfs diff=lfs merge=lfs -text
